test: share REST source wiring