@@ -49,50 +49,30 @@ class SourceDraftServiceTest {
 
     @Test
     void rejectsUnknownModesAndSrsEvolutionValues() {
-        assertThatThrownBy(() -> service().draft(draft("unknown", null, null, List.of())))
-                .isInstanceOf(TapstateException.class)
-                .hasMessageContaining("unknown Source mode");
-        assertThatThrownBy(() -> service().draft(draft("cdc", null,
-                new SourceDraft.SourceSrs("orders", null, "future", null, null), List.of())))
-                .isInstanceOf(TapstateException.class)
-                .hasMessageContaining("unknown srs.schemaEvolution");
+        assertDraftRejected(draft("unknown", null, null, List.of()), "unknown Source mode");
+        assertDraftRejected(draft("cdc", null,
+                new SourceDraft.SourceSrs("orders", null, "future", null, null), List.of()),
+                "unknown srs.schemaEvolution");
     }
 
     @Test
     void rejectsInvalidTableSelectorsBeforeConnectorValidation() {
-        assertThatThrownBy(() -> service().draft(draft(null, Collections.singletonList(null), null, List.of())))
-                .isInstanceOf(TapstateException.class)
-                .hasMessageContaining("null entries");
-        assertThatThrownBy(() -> service().draft(draft(null,
-                List.of(new SourceTableDraft("other", "orders", null, null, null, null)), null, List.of())))
-                .isInstanceOf(TapstateException.class)
-                .hasMessageContaining("unknown table type");
-        assertThatThrownBy(() -> service().draft(draft(null,
-                List.of(new SourceTableDraft("literal", "orders", "order_.*", null, null, null)),
-                null, List.of())))
-                .isInstanceOf(TapstateException.class)
-                .hasMessageContaining("literal tables accept only name");
-        assertThatThrownBy(() -> service().draft(draft(null,
-                List.of(new SourceTableDraft("regex", "orders", "order_.*", null, null, null)),
-                null, List.of())))
-                .isInstanceOf(TapstateException.class)
-                .hasMessageContaining("regex tables accept only pattern");
-        assertThatThrownBy(() -> service().draft(draft(null,
-                List.of(new SourceTableDraft("spec", "orders", "order_.*", null, null, null)),
-                null, List.of())))
-                .isInstanceOf(TapstateException.class)
-                .hasMessageContaining("spec tables require name");
+        assertDraftRejected(draft(null, Collections.singletonList(null), null, List.of()), "null entries");
+        assertDraftRejected(draft(null, List.of(table("other", "orders", null)), null, List.of()),
+                "unknown table type");
+        assertDraftRejected(draft(null, List.of(table("literal", "orders", "order_.*")), null, List.of()),
+                "literal tables accept only name");
+        assertDraftRejected(draft(null, List.of(table("regex", "orders", "order_.*")), null, List.of()),
+                "regex tables accept only pattern");
+        assertDraftRejected(draft(null, List.of(table("spec", "orders", "order_.*")), null, List.of()),
+                "spec tables require name");
     }
 
     @Test
     void rejectsMutableNumberImplementationsAtTheImmutableInputBoundary() {
         AtomicInteger mutable = new AtomicInteger(3306);
 
-        assertThatThrownBy(() -> new SourceDraft(
-                "orders", null, "mysql", Map.of("port", mutable), null, null,
-                null, null, null, List.of()))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("unsupported JSON value type");
+        assertInvalidConfig(Map.of("port", mutable), "unsupported JSON value type");
     }
 
     @Test
@@ -122,6 +102,12 @@ class SourceDraftServiceTest {
                 .hasMessageContaining(message);
     }
 
+    private static void assertDraftRejected(SourceDraft draft, String message) {
+        assertThatThrownBy(() -> service().draft(draft))
+                .isInstanceOf(TapstateException.class)
+                .hasMessageContaining(message);
+    }
+
     private static SourceDraftService service() {
         return new SourceDraftService(TapstateCatalog.load());
     }
@@ -136,5 +122,9 @@ class SourceDraftServiceTest {
                 "password", "secret"));
         return new SourceDraft(
                 "orders", null, "mysql", config, mode, tables, null, srs, null, clearSecrets);
+    }
+
+    private static SourceTableDraft table(String type, String name, String pattern) {
+        return new SourceTableDraft(type, name, pattern, null, null, null);
     }
 }
